--- a/.env
+++ b/.env
@@ -22,6 +22,10 @@ VALID_STATE=California
 VALID_CITY=Los Angeles
 VALID_ZIP=90001
 VALID_MOBILE_NUMBER=1234567890
+VALID_DAY=10
+VALID_MONTH=July
+VALID_YEAR=2003
+VALID_COUNTRY=United States
 
 # Invalid Data
 INVALID_EMAIL=invalidemail
