update dotenv, change test email

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ URL=https://automationexercise.com/
 
 # Signup Data
 SIGNUP_NAME=John Doe
-SIGNUP_EMAIL=johndoe@example.com
+SIGNUP_EMAIL=example.test@mail.com
 
 # Login Data
 LOGIN_EMAiL=johndoe@example.com
@@ -11,7 +11,7 @@ LOGIN_PASSWORD=Password123
 
 # Valid Data
 VALID_NAME=John Doe
-VALID_EMAIL=johndoe@example.com
+VALID_EMAIL=example.test@mail.com
 VALID_PASSWORD=Password123
 VALID_FIRST_NAME=John
 VALID_LAST_NAME=Doe
