--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/DappY-127/python_playwright_automation_example#readme",
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@playwright/test": "^1.40.0",
     "@types/node": "^20.9.4",
     "dotenv": "^16.3.1"
