update page methods

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ URL=https://automationexercise.com/
 
 # Signup Data
 SIGNUP_NAME=John Doe
-SIGNUP_EMAIL=example.test@mail.com
+SIGNUP_EMAIL=examplemail.test@mail.com
 
 # Login Data
 LOGIN_EMAiL=johndoe@example.com
@@ -11,7 +11,7 @@ LOGIN_PASSWORD=Password123
 
 # Valid Data
 VALID_NAME=John Doe
-VALID_EMAIL=example.test@mail.com
+VALID_EMAIL=examplemail.test@mail.com
 VALID_PASSWORD=Password123
 VALID_FIRST_NAME=John
 VALID_LAST_NAME=Doe
@@ -28,7 +28,7 @@ VALID_YEAR=2003
 VALID_COUNTRY=United States
 
 # Invalid Data
-INVALID_EMAIL=invalidemail
+INVALID_EMAIL=invalidemail@mail.cock
 INVALID_PASSWORD=pass
 INVALID_ZIP=ABCDE
 INVALID_MOBILE_NUMBER=123
