--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx playwright test",
-    "html-report": "npx playwright show-report"
+    "html-report": "npx playwright show-report",
+    "singlerun": "npx playwright test --workers=1"
   },
   "repository": {
     "type": "git",
